@@ -20,182 +20,188 @@
 <!-- ======================================================================= -->
 <project name="TWE" default="output" basedir=".">
 
-	<!-- ==================================================================== -->
-	<!-- Output rebranding					                                      -->
-	<!-- ==================================================================== -->
-	<target name="output">
-		<mkdir dir="${branding.dir}/tmp" />
+   <!-- ==================================================================== -->
+   <!-- Output rebranding                                                     -->
+   <!-- ==================================================================== -->
+   <target name="output">
+      <mkdir dir="${branding.dir}/tmp" />
 
-		<!-- license -->
-		<copy todir="${build.dir}" overwrite="true">
-			<fileset dir="${branding.dir}/license" />
-		</copy>
+      <!-- license -->
+      <copy todir="${build.dir}" overwrite="true">
+         <fileset dir="${branding.dir}/license" />
+      </copy>
 
-		<!-- icons -->
-		<copy todir="${build.dir}/bin" overwrite="true">
-			<fileset dir="${branding.dir}/registry" />
-		</copy>
+      <!-- icons -->
+      <copy todir="${build.dir}/bin" overwrite="true">
+         <fileset dir="${branding.dir}/registry" />
+      </copy>
 
-		<!-- config -->
-		<copy todir="${build.dir}/config" overwrite="true">
-			<fileset dir="${branding.dir}/config" />
-		</copy>
+      <!-- config -->
+      <delete includeemptydirs="true">
+          <fileset dir="${build.dir}/config" defaultexcludes="false">
+             <exclude name="defaultconfig" />
+             <exclude name="default" />
+          </fileset>
+      </delete>      
+      <copy todir="${build.dir}/config" overwrite="true">
+         <fileset dir="${branding.dir}/config" />
+      </copy>
 
-		<!-- activityicons -->
-		<fileset dir="${branding.dir}/activityicons" id="activityicons.files">
-			<include name="*" />
-		</fileset>
-		<pathconvert pathsep="," property="activityiconsFile" refid="activityicons.files" />
-		<if>
-			<equals arg1="${activityiconsFile}" arg2="" />
-			<then />
-			<else>
-				<copy todir="${branding.dir}/tmp/org/enhydra/jawe/activityicons">
-					<fileset dir="${branding.dir}/activityicons" />
-				</copy>
-				<jar destfile="${build.dir}/lib/${app.name}activityicons.jar" update="false">
-					<fileset dir="${branding.dir}/tmp" />
-				</jar>
-				<delete dir="${branding.dir}/tmp/org/enhydra/jawe/activityicons" quiet="true" />
-			</else>
-		</if>
+      <!-- activityicons -->
+      <fileset dir="${branding.dir}/activityicons" id="activityicons.files">
+         <include name="*" />
+      </fileset>
+      <pathconvert pathsep="," property="activityiconsFile" refid="activityicons.files" />
+      <if>
+         <equals arg1="${activityiconsFile}" arg2="" />
+         <then />
+         <else>
+            <copy todir="${branding.dir}/tmp/org/enhydra/jawe/activityicons">
+               <fileset dir="${branding.dir}/activityicons" />
+            </copy>
+            <jar destfile="${build.dir}/lib/${app.name}activityicons.jar" update="false">
+               <fileset dir="${branding.dir}/tmp" />
+            </jar>
+            <delete dir="${branding.dir}/tmp/org/enhydra/jawe/activityicons" quiet="true" />
+         </else>
+      </if>
 
-		<!-- i18n files -->
-		<copy todir="${branding.dir}/tmp/org/enhydra/jawe/language">
-			<fileset dir="${branding.dir}/i18n" />
-		</copy>
-		<jar destfile="${build.dir}/lib/${app.name}lan.jar" update="true">
-			<fileset dir="${branding.dir}/tmp" />
-		</jar>
-		<delete dir="${branding.dir}/tmp/org/enhydra/jawe/language" quiet="true" />
+      <!-- i18n files -->
+      <copy todir="${branding.dir}/tmp/org/enhydra/jawe/language">
+         <fileset dir="${branding.dir}/i18n" />
+      </copy>
+      <jar destfile="${build.dir}/lib/${app.name}lan.jar" update="true">
+         <fileset dir="${branding.dir}/tmp" />
+      </jar>
+      <delete dir="${branding.dir}/tmp/org/enhydra/jawe/language" quiet="true" />
 
-		<!-- images -->
-		<copy todir="${branding.dir}/tmp/org/enhydra/jawe/images">
-			<fileset dir="${branding.dir}/images" />
-		</copy>
-		<jar destfile="${build.dir}/lib/${app.name}pic.jar" update="true">
-			<fileset dir="${branding.dir}/tmp" />
-		</jar>
-		<delete dir="${branding.dir}/tmp/org/enhydra/jawe/images" quiet="true" />
+      <!-- images -->
+      <copy todir="${branding.dir}/tmp/org/enhydra/jawe/images">
+         <fileset dir="${branding.dir}/images" />
+      </copy>
+      <jar destfile="${build.dir}/lib/${app.name}pic.jar" update="true">
+         <fileset dir="${branding.dir}/tmp" />
+      </jar>
+      <delete dir="${branding.dir}/tmp/org/enhydra/jawe/images" quiet="true" />
 
-		<!-- lib -->
-		<copy todir="${build.dir}/lib" overwrite="true">
-			<fileset dir="${branding.dir}/lib" />
-		</copy>
+      <!-- lib -->
+      <copy todir="${build.dir}/lib" overwrite="true">
+         <fileset dir="${branding.dir}/lib" />
+      </copy>
 
-		<!-- license & aboutbox.properties -->
-		<copy todir="${branding.dir}/tmp">
-			<fileset dir="${branding.dir}/license" />
-		</copy>
-		<copy todir="${branding.dir}/tmp/org/enhydra/jawe">
-			<fileset dir="${branding.dir}/about" />
-		</copy>
-		<jar destfile="${build.dir}/lib/${app.name}core.jar" update="true">
-			<fileset dir="${branding.dir}/tmp" />
-		</jar>
-		<delete dir="${branding.dir}/tmp" includes="License.txt" quiet="true" />
-		<delete dir="${branding.dir}/tmp/org/enhydra/jawe" quiet="true" />
+      <!-- license & aboutbox.properties -->
+      <copy todir="${branding.dir}/tmp">
+         <fileset dir="${branding.dir}/license" />
+      </copy>
+      <copy todir="${branding.dir}/tmp/org/enhydra/jawe">
+         <fileset dir="${branding.dir}/about" />
+      </copy>
+      <jar destfile="${build.dir}/lib/${app.name}core.jar" update="true">
+         <fileset dir="${branding.dir}/tmp" />
+      </jar>
+      <delete dir="${branding.dir}/tmp" includes="License.txt" quiet="true" />
+      <delete dir="${branding.dir}/tmp/org/enhydra/jawe" quiet="true" />
 
-		<!-- examples -->
-		<fileset dir="${branding.dir}/examples" id="examples.files">
-			<include name="*" />
-		</fileset>
-		<pathconvert pathsep="," property="examplesFile" refid="examples.files" />
-		<if>
-			<equals arg1="${examplesFile}" arg2="" />
-			<then />
-			<else>
-				<delete dir="${build.dir}/examples">
-				</delete>
-				<copy todir="${build.dir}/examples">
-					<fileset dir="${branding.dir}/examples" />
-				</copy>
-			</else>
-		</if>
+      <!-- examples -->
+      <fileset dir="${branding.dir}/examples" id="examples.files">
+         <include name="*" />
+      </fileset>
+      <pathconvert pathsep="," property="examplesFile" refid="examples.files" />
+      <if>
+         <equals arg1="${examplesFile}" arg2="" />
+         <then />
+         <else>
+            <delete dir="${build.dir}/examples">
+            </delete>
+            <copy todir="${build.dir}/examples">
+               <fileset dir="${branding.dir}/examples" />
+            </copy>
+         </else>
+      </if>
 
-		<delete dir="${branding.dir}/tmp" />
+      <delete dir="${branding.dir}/tmp" />
 
-		<!--<ant target="copyDoc"/>-->
-	</target>
+      <!--<ant target="copyDoc"/>-->
+   </target>
 
 
-	<!-- ==================================================================== -->
-	<!-- Installation rebranding		                                         -->
-	<!-- ==================================================================== -->
-	<target name="install">
-		<mkdir dir="${branding.dir}/tmp/install" />
-		<copy todir="${branding.dir}/tmp/install">
-			<fileset dir="${basedir}/../installation/Windows" />
-		</copy>     
-		<copy todir="${basedir}/../installation/Windows" overwrite="true">
-			<fileset dir="${branding.dir}/installation" />
-		</copy>
+   <!-- ==================================================================== -->
+   <!-- Installation rebranding                                               -->
+   <!-- ==================================================================== -->
+   <target name="install">
+      <mkdir dir="${branding.dir}/tmp/install" />
+      <copy todir="${branding.dir}/tmp/install">
+         <fileset dir="${basedir}/../installation/Windows" />
+      </copy>     
+      <copy todir="${basedir}/../installation/Windows" overwrite="true">
+         <fileset dir="${branding.dir}/installation" />
+      </copy>
 
-		<property name="log.filename" value="log_${app.name}.txt" />
+      <property name="log.filename" value="log_${app.name}.txt" />
 
-		<available file="${branding.dir}/license/License.txt" property="license.exists" value="true" />
-		<property name="license.exists" value="false" />
+      <available file="${branding.dir}/license/License.txt" property="license.exists" value="true" />
+      <property name="license.exists" value="false" />
 
-		<if>
-			<istrue value="${license.exists}" />
-			<then>
-				<property name="license.path" value="${branding.dir}/license/License.txt" />
-			</then>
-			<else>
-				<property name="license.path" value="${branding.dir}/../licenses/License.txt" />
-			</else>
-		</if>
+      <if>
+         <istrue value="${license.exists}" />
+         <then>
+            <property name="license.path" value="${branding.dir}/license/License.txt" />
+         </then>
+         <else>
+            <property name="license.path" value="${branding.dir}/../licenses/License.txt" />
+         </else>
+      </if>
 
-		<echo message="Creating Rebrended TWE Windows installation, please wait ..." />
-		<exec dir="${basedir}/../installation/Windows" executable="${basedir}/../tools/nsis/makensis.exe">
-			<arg line="/V4" />
-			<arg line="/O..\..\${log.filename}" />
-			<arg line="/DVERSION=${version}" />
-			<arg line="/DRELEASE=${release}" />
+      <echo message="Creating Rebrended TWE Windows installation, please wait ..." />
+      <exec dir="${basedir}/../installation/Windows" executable="${basedir}/../tools/nsis/makensis.exe">
+         <arg line="/V4" />
+         <arg line="/O..\..\${log.filename}" />
+         <arg line="/DVERSION=${version}" />
+         <arg line="/DRELEASE=${release}" />
          <arg line="/DSIGNTOOL_PATH=&quot;&quot;" />
          <arg line="/DKEY_PATH=&quot;&quot;" />
          <arg line="/DPASSWORD=&quot;&quot;" />
          <arg line="/DFULL_NAME=&quot;${project.name} ${version}-${release}&quot;" />
-			<arg line="/DTWE_DIR=&quot;${build.dir}&quot;" />
-			<arg line="/DOUT_DIR=&quot;${dist.community.dir}&quot;" />
-			<arg line="/DLICENSE=&quot;${license.path}&quot;" />
-			<arg line="/DLANGUAGE=${language}" />
+         <arg line="/DTWE_DIR=&quot;${build.dir}&quot;" />
+         <arg line="/DOUT_DIR=&quot;${dist.community.dir}&quot;" />
+         <arg line="/DLICENSE=&quot;${license.path}&quot;" />
+         <arg line="/DLANGUAGE=${language}" />
          <arg line="/DSERVER_TIMEOUT=&quot;${server.timeout}&quot;" />
          <arg line="/DBUILDID=&quot;${build.timestamp}&quot;" />
-			<arg line="${nsis.script}" />
-		</exec>
+         <arg line="${nsis.script}" />
+      </exec>
 
-		<copy todir="${basedir}/../installation/Windows" overwrite="true">
-			<fileset dir="${branding.dir}/tmp/install" />
-		</copy>
+      <copy todir="${basedir}/../installation/Windows" overwrite="true">
+         <fileset dir="${branding.dir}/tmp/install" />
+      </copy>
       
-		<delete dir="${branding.dir}/tmp" />
-		<!--<ant target="copyDocBack"/>-->
+      <delete dir="${branding.dir}/tmp" />
+      <!--<ant target="copyDocBack"/>-->
 
-	</target>
-
-
-	<!-- ==================================================================== -->
-	<!-- Clean target                                                         -->
-	<!-- ==================================================================== -->
-	<target name="clean">
-
-		<delete>
-			<fileset dir="${branding.dir}">
-				<include name="log_*.txt" />
-			</fileset>
-		</delete>
-
-	</target>
+   </target>
 
 
-	<!-- ==================================================================== -->
-	<!-- Replace original documentation with  branded one                     -->
-	<!-- ==================================================================== -->
-	<target name="copyDoc">
-		<copy todir="${basedir}/../doc/tmp" overwrite="true">
-			<fileset dir="${branding.dir}/doc" />
-		</copy>
-	</target>
+   <!-- ==================================================================== -->
+   <!-- Clean target                                                         -->
+   <!-- ==================================================================== -->
+   <target name="clean">
+
+      <delete>
+         <fileset dir="${branding.dir}">
+            <include name="log_*.txt" />
+         </fileset>
+      </delete>
+
+   </target>
+
+
+   <!-- ==================================================================== -->
+   <!-- Replace original documentation with  branded one                     -->
+   <!-- ==================================================================== -->
+   <target name="copyDoc">
+      <copy todir="${basedir}/../doc/tmp" overwrite="true">
+         <fileset dir="${branding.dir}/doc" />
+      </copy>
+   </target>
 
 </project>
