@@ -1,4 +1,7 @@
 ###### TWE 5.1-1 RELEASED ######
+2013-10-31 Sasa Bojanic <sasaboy@together.at>
+   # When re-branding, now only default configuration + branding configurations appearing in the output
+
 2013-10-29 Sasa Bojanic <sasaboy@together.at>
 	# Introduced possibility to specify app.name and project.name in build.properties (using configure script)
 	# Introduced possibility to specify branding directory to be outside the project.
